--- a/blog_web/package.json
+++ b/blog_web/package.json
@@ -9,15 +9,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^1.6.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "mavon-editor": "^2.9.1",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
+    "vuex": "^3.6.2",
     "webpack-env": "^0.8.0"
   },
   "devDependencies": {
