--- a/blog_admin/package.json
+++ b/blog_admin/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -17,7 +18,8 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
     "nodemailer-smtp-transport": "^2.7.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.37"
