--- a/blog_web/package.json
+++ b/blog_web/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@kangc/v-md-editor": "^1.6.1",
     "axios": "^0.21.1",
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "loader": "^2.0.0",
     "mavon-editor": "^2.9.1",
+    "qrcode.vue": "1.7.0",
+    "sass": "^1.32.8",
+    "sass-loader": "7.x",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
     "vue-class-component": "^7.2.3",
@@ -38,13 +43,13 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
+    "babel-plugin-import": "^1.13.3",
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   },
