--- a/blog_web/package.json
+++ b/blog_web/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
     "vue-class-component": "^7.2.3",
+    "vue-image-crop-upload": "^3.0.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2",
