--- a/blog_web/tsconfig.json
+++ b/blog_web/tsconfig.json
@@ -5,12 +5,13 @@
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
+    "noImplicitAny":false,
     "baseUrl": ".",
     "types": [
       "webpack-env",
