--- a/blog_web/package.json
+++ b/blog_web/package.json
@@ -26,6 +26,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2",
+    "vuex-class": "^0.3.2",
     "webpack-env": "^0.8.0"
   },
   "devDependencies": {
