--- a/blog_admin/package.json
+++ b/blog_admin/package.json
@@ -14,11 +14,13 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
     "nodemailer-smtp-transport": "^2.7.4",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "uuid": "^8.3.2"
   },
