--- a/blog_web/package.json
+++ b/blog_web/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
     "loader": "^2.0.0",
+    "lodash": "^4.17.21",
     "mavon-editor": "^2.9.1",
     "qrcode.vue": "1.7.0",
     "sass": "^1.32.8",
